fix side bar filters scrollbar

--- a/src/components/Ranger/RangerSlider.scss
+++ b/src/components/Ranger/RangerSlider.scss
@@ -2,6 +2,7 @@
 
 .rangerContainer {
   display: block;
+  min-height: 5rem;
 }
 
 .rangeslider {
